--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,11 @@
     <string name="registering_message_generating">InstanceID 토큰 생성중...</string>
     <string name="registering_message_complete">완료!</string>
 
-
+    <!-- For SignUpAccountActivity-->
+    <string name="hint_pw">Password</string>
+    <string name="hint_pw_confirm">Confirm</string>
+    <string name="err_msg_pw">Enter Password</string>
+    <string name="err_msg_pw_confirm">Confirm Password</string>
     <!-- For GCM Chatting-->
     <string name="hint_name">Full Name</string>
     <string name="hint_email">Email</string>
@@ -127,6 +131,20 @@
         "On the layout level, design your app layout to minimize opportunities for interference. "
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
+    </string>
+    <string name="title_activity_sign_up_account">Sign in</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
     </string>
 
 
