--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="app_name">AndroidAnsr</string>
     <string name="hello">Hello World, Chat Fragment!</string>
     <string name="hello_world">Hello world!</string>
@@ -146,8 +145,11 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+
     <string name="title_activity_take_photo">TakePhotoActivity</string>
     <string name="title_activity_media_store">MediaStoreActivity</string>
+    <string name="title_activity_board_detail">게 시 글</string>
+    <string name="board_anonymous_name">익 명</string>
 
 
 </resources>
