--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,6 +107,7 @@
     <string name="title_activity_my_interest">MyInterestActivity</string>
     <string name="title_activity_management">ManagementActivity</string>
     <string name="title_activity_setting">SettingActivity</string>
+    <string name="title_activity_pinch_zoom">PinchZoomActivity</string>
 
 
 </resources>
