--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="hello">Hello World, Chat Fragment!</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_splash">zAnsr</string>
+    <string name="title_activity_splash">학교사람들</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="title_activity_sign_up">SignUpActivity</string>
 
@@ -108,6 +108,7 @@
     <string name="title_activity_management">ManagementActivity</string>
     <string name="title_activity_setting">SettingActivity</string>
     <string name="title_activity_pinch_zoom">PinchZoomActivity</string>
+    <string name="title_activity_open_sources">OpenSourcesActivity</string>
 
 
 </resources>
