--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">AndroidAnsr</string>
+    <string name="app_name">학교사람들</string>
     <string name="hello">Hello World, Chat Fragment!</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
